@@ -36,7 +36,7 @@ if (PHP_ONPHP != "no") {
 	ADD_SOURCES(
 		"ext/onphp/src/core/Form/Primitives",
 		"BasePrimitive.c RangedPrimitive.c ComplexPrimitive.c ListedPrimitive.c \
-		FiltrablePrimitive.c",
+		FiltrablePrimitive.c PrimitiveNumber.c",
 		"onphp"
 	);
 	
